--- a/MainApplication/Content/style.css
+++ b/MainApplication/Content/style.css
@@ -5,7 +5,7 @@ body {
 	font: 11px/22px Arial, Helvetica, sans-serif;
 	color:#000;
 	min-width:998px;
-	background: url(../images/body-bg.jpg) center 0 repeat #1c1c1c;
+	background: url(Images/body-bg.jpg) center 0 repeat #1c1c1c;
 	height:100%;
 }
 .ic {border:0;float:right;background:#fff;color:#f00;width:50%;line-height:10px;font-size:10px;margin:-220% 0 0 0;overflow:hidden;padding:0}
@@ -80,12 +80,12 @@ h1 {display:inline-block; z-index:111; float:left; padding:27px 0 0 21px;}
 header p {float:right; width:230px; overflow:hidden; font:16px/20px Tahoma, Geneva, sans-serif; color:#c6c6ce; padding:27px 0 27px 0; }
 header p>span {display:block; color:#fff; font-size:25px; line-height:30px; margin-top:6px;letter-spacing:-1px; }
 
-nav {display:block; z-index:1111; position:relative; background:url(../images/header.jpg) 0 bottom repeat-x; }
+nav {display:block; z-index:1111; position:relative; background:url(Images/header.jpg) 0 bottom repeat-x; }
 
 ul.menu {display:block; width:960px; margin:0 auto;}
-ul.menu li {float:left; display:block; height:60px; text-align:center; background:url(../images/li.jpg) right 0 no-repeat; }
+ul.menu li {float:left; display:block; height:60px; text-align:center; background:url(Images/li.jpg) right 0 no-repeat; }
 ul.menu li:first-child {background:transparent;}
-ul.menu li a.home {background:url(../images/home.jpg) 0 0 no-repeat;width:61px; height:60px; display:block; padding:0 !important;}
+ul.menu li a.home {background:url(Images/home.jpg) 0 0 no-repeat;width:61px; height:60px; display:block; padding:0 !important;}
 ul.menu li a { font:16px/20px Tahoma, Geneva, sans-serif; color:#000; display:block; padding:19px 22px 21px 22px; overflow:hidden; }
 ul.menu li:hover, ul.menu li.current {}
 ul.menu li:hover a.home, ul.menu li.current a.home {background-position:right 0;}
@@ -110,8 +110,8 @@ ul.menu li a:hover , ul.menu li.current a {color:#0fc6ee; text-shadow:#68dcf6 0 
 .box-2 h2 {margin-bottom:13px;}
 .box-2>div {padding-bottom:20px;}
 .box-2>div>div {position:relative; border:#494949 1px solid; background:#000; padding:18px 20px 18px 29px; color:#9f9fa6; font-style:italic; text-transform:uppercase;}
-.box-2>div>div .comments-corner {position:absolute; bottom:-14px; left:29px; width:13px; height:14px; background:url(../images/comments-corner.png) 0 0 no-repeat; }
-.box-2>div> a {display:inline-block; background:url(../images/icon-1.png) 0 0 no-repeat; color:#9f9fa6; font-weight:bold; text-transform:uppercase; line-height:21px; padding-top:3px; padding-left:30px; margin-top:10px;}
+.box-2>div>div .comments-corner {position:absolute; bottom:-14px; left:29px; width:13px; height:14px; background:url(Images/comments-corner.png) 0 0 no-repeat; }
+.box-2>div> a {display:inline-block; background:url(Images/icon-1.png) 0 0 no-repeat; color:#9f9fa6; font-weight:bold; text-transform:uppercase; line-height:21px; padding-top:3px; padding-left:30px; margin-top:10px;}
 .box-2>div> a:hover {color:#fff;}
 .box-3 {width:420px; float:left;}
 .box-3 h2 {margin-bottom:16px;}
@@ -125,7 +125,7 @@ ul.menu li a:hover , ul.menu li.current a {color:#0fc6ee; text-shadow:#68dcf6 0 
 .box-4 >div {float:left; width:190px; margin-right:20px;}
 .box-4 >div img {margin-bottom:13px;}
 .shadow {position:relative;}
-.shadow:after {content:""; position:absolute; bottom:9px; left:-40px; background:url(../images/shadow.png) 0 0 no-repeat; width:270px; height:21px;}
+.shadow:after {content:""; position:absolute; bottom:9px; left:-40px; background:url(Images/shadow.png) 0 0 no-repeat; width:270px; height:21px;}
 .box-5 img {margin:14px 0 13px 0;}
 .box-5 ul {margin:8px 0 17px 0;}
 .box-6 {overflow:hidden;}
