--- a/MainApplication/Views/Shared/_Layout.cshtml
+++ b/MainApplication/Views/Shared/_Layout.cshtml
@@ -7,10 +7,10 @@
 <head>
 <title>Car Repair</title>
 <meta charset="utf-8">
-    @Styles.Render("~/Content/CustomContent")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/Scripts/Custom")
+    @Styles.Render("~/Content")
+    @*@Scripts.Render("~/bundles/jquery")*@
+    @*@Scripts.Render("~/bundles/modernizr")*@
+    @Scripts.Render("~/Scripts")
 <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300' rel='stylesheet' type='text/css'>
 
 <script>
