--- a/MainApplication/Views/Shared/_Layout.cshtml
+++ b/MainApplication/Views/Shared/_Layout.cshtml
@@ -6,13 +6,18 @@
 <html lang="en">
 <head>
 <title>Car Repair</title>
-<meta charset="utf-8">
-    @Styles.Render("~/Content")
-    @*@Scripts.Render("~/bundles/jquery")*@
-    @*@Scripts.Render("~/bundles/modernizr")*@
-    @Scripts.Render("~/Scripts")
-   
+    <meta charset="utf-8">
+     @Scripts.Render("~/Scripts/jquery-1.8.2.js")
+     @Scripts.Render("~/Scripts/html5.js")
+     @Scripts.Render("~/Scripts/jquery.easing.1.3.js")
+     @Scripts.Render("~/Scripts/tms-0.4.1.js")
 
+     @Styles.Render("~/Content/ie.css")
+     @Styles.Render("~/Content/reset.css")
+     @Styles.Render("~/Content/slider.css")
+     @Styles.Render("~/Content/style.css")
+   
+   
 <script>
     $(document).ready(function () {
         $('.slider')._TMS({
