--- a/MainApplication/Views/Shared/_Layout.cshtml
+++ b/MainApplication/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
      @Scripts.Render("~/Scripts/html5.js")
      @Scripts.Render("~/Scripts/jquery.easing.1.3.js")
      @Scripts.Render("~/Scripts/tms-0.4.1.js")
+    @Scripts.Render("~/Scripts/underscore.js")
 
      @Styles.Render("~/Content/ie.css")
      @Styles.Render("~/Content/reset.css")
@@ -63,6 +64,7 @@
                     <li><a href="/Home/Repair">Repair</a></li>
                     <li><a href="/Home/PriceList">Price List</a></li>
                     <li><a href="/Home/Locations">Locations</a></li>
+                    <li><a href="/Home/Comments">Comments</a></li>
                 </ul>
                 <div class="clear"></div>
             </nav>
